# Mecanum_ros

./: .gitignore  README.md  README_CHN.md  setup_environment_server.sh  setup_envrionment_server.sh  setup_from_scratch.sh  setup_server_from_scratch.sh
src/: instruction.txt
src/Documentation/: environment_config.sh
src/Documentation/sc_udev/: sc-robot.rules
src/ase_exploration/launch/: handsfree_exploratoin.launch
src/bag_plot/: CMakeLists.txt
src/base_simple_controller/: CMakeLists.txt  package.xml
src/base_simple_controller/include/base_simple_controller/: base_simple_controller.h
src/base_simple_controller/src/: base_simple_controller.cpp
src/handsfree_camera/robot_tf/: d435_tf_rtab.xml  d435_tf_rtab1.xml
src/handsfree_gazebo/launch/: rviz.launch
src/handsfree_gazebo/urdf/: URDF_HandFree_improved_version.SLDASM_improved.URDF
src/handsfree_hw/: CMakeLists.txt  config.txt  package.xml
src/handsfree_hw/config/: config.yaml
src/handsfree_hw/include/handsfree_hw/: hf_hw.h  hf_hw_ros.h
src/handsfree_hw/include/sdk/hf_link/: hf_link.cpp  hf_link.h  hf_link_state_machine.cpp
src/handsfree_hw/include/sdk/robot_abstract/: imu_info.h  robot_abstract.h
src/handsfree_hw/launch/: handsfree_hw.launch  handsfree_hw.launch.old  handsfree_hw_rtab.launch  mecanum_keyboard.launch  sc_hw.launch
src/handsfree_hw/scripts/: mecanum_teleop_key.py
src/handsfree_hw/src/: hf_hw.cpp  hf_hw_ros.cpp  main.cpp
src/line_tracker/: CMakeLists.txt  package.xml
src/line_tracker/include/line_tracker/: line_tracker.h
src/line_tracker/launch/: line_tracker.launch
src/line_tracker/scripts/: line_action.py
src/line_tracker/src/: line_ros.cpp  line_tracker.cpp
src/ocean_audio/: CMakeLists.txt  package.xml
src/ocean_audio/launch/: ocean_audio.launch  server_pad.launch  server_ros.launch  server_sc.launch
src/ocean_audio/script/: audio_server.py  pad_shutdown.py  server_bringup.sh  server_debug.py  server_debug_thread.py  server_pad_bringup.sh  server_ros.py  server_ros_bringup.sh  server_ros_exit.py  server_ros_shutdown.py  try_roslaunch.py
src/ocean_vision/: CMakeLists.txt  package.xml
src/ocean_vision/config/: config.yml  pyconfig.yaml  tracker.yaml
src/ocean_vision/data/: B.npz
src/ocean_vision/include/: CMT.h  cmt_ros.h  common.h  gui.h
src/ocean_vision/launch/: cmt_hc_tracker.launch  cmt_tracker.launch  cmt_tracker_amcl.launch  cmt_tracker_mecanum.launch  cmt_tracker_mecanum_remote.launch  cmt_tracker_ros.launch  cmt_tracker_ros_nuc.launch  face_detection.launch  generate_dataset.launch  generate_dataset_astra.launch  generate_dataset_d435.launch  generate_dataset_d435_outdoor.launch  video_transfor.launch
src/ocean_vision/msg/: Cmt.msg
src/ocean_vision/scripts/: Analyze.py  cmt_listener.py  face_marker.py  goal.py  listener.py  listener_depth.py  listener_hc.py  listener_mecanum.py  tracker.py  tracker_with_marker.py  transform_base_to_map.py
src/ocean_vision/scripts/cpp_extension/: Makefile  hc.py  hc_sensor.cpp
src/ocean_vision/src/: CMT.cpp  Consensus.cpp  Fusion.cpp  Matcher.cpp  Tracker.cpp  cmt_ros.cpp  cmt_ros_server.cpp  gui.cpp  listener.cpp  main.cpp  main_cmt.cpp  realsense_image.cpp  ros_rgbd.cpp
src/realsense-2.1.0/realsense2_camera/launch/: rs_camera.launch  rs_gmapping.launch  rs_scan.launch
src/rplidar_ros/launch/: frames.gv
src/rplidar_ros/launch/robot_tf/: map.pgm  ocean_a2.yaml  stone_v2_tf.xml
src/rplidar_ros/launch/yaml/rplidar/: laser_filter_stone_v2.yaml
src/sc_2dnav/: CMakeLists.txt  package.xml  setup.py
src/sc_2dnav/launch/: demo_handsfree_mapping.launch  demo_handsfree_rviz.launch  demo_move_base_amcl.launch  demo_move_base_amcl_client.launch  demo_move_base_amcl_server.launch  demo_rviz.launch  demo_sc_rtab_mapping.launch  demo_sc_rtab_rviz.launch  gmapping.launch  hector_mapping.launch  imgui.ini  move_base_amcl.launch  move_base_amcl_5cm.launch  move_base_gmapping.launch  navigation_by_realsense2.launch
src/sc_2dnav/move_base_config/: move_base.xml
src/sc_2dnav/move_base_config/mecanum/: amcl_node.xml  base_local_planner_params.yaml  costmap_common_params.yaml  dwa_local_planner_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml
src/sc_2dnav/nodes/: calibrate_angular.py  calibrate_linear.py  odom_out_and_back.py
src/sc_2dnav/robot_tf/: d435_tf_rtab1.xml
src/sc_2dnav/rviz/: HANDSFREE_Robot.rviz  sc_rtabmap.rviz
src/sc_2dnav/script/: nav_demo.py  nav_test.py
src/sc_gazebo/: package.xml
src/sc_gazebo/launch/: sc_gazebo.launch
src/sc_gazebo/urdf/: mecanum.xacro  sc_laser_camera.gazebo  sc_mecanum.urdf.xacro
src/sc_gui_py3/: OB_SC_GUI1.0.py  gui.py  oceanbotech_widgets.py
src/sc_gui_py3/ob_sc_gui/: models.py  widgets.py  windows.py
src/sc_hw/: CMakeLists.txt  config.txt  package.xml
src/sc_hw/config/: sc_config.yaml
src/sc_hw/include/handsfree_hw/: hf_hw_ros.h  transport_serial.h
src/sc_hw/include/sc_hw/: base_cmd_interface.h  base_state_interface.h  sc_hw.h  sc_hw_ros.h  transport.h  transport_serial.h
src/sc_hw/include/sdk/hf_link/: hf_link_state_machine.cpp
src/sc_hw/include/sdk/robot_abstract/: head_parameters.h  imu_info.h  mecanum4_parameters.h  motor_parameters.h  omni3_parameters.h  robot_abstract.h
src/sc_hw/include/sdk/sc_link/: sc_link.cpp  sc_link.h  sc_link_platform.h  sc_link_state_machine.cpp  sc_link_state_machine.h
src/sc_hw/launch/: handsfree_hw.launch  mecanum_keyboard.launch  mecanum_turtlebot.launch  sc_hw.launch
src/sc_hw/scripts/: mecanum_teleop_key.py
src/sc_hw/src/: hf_hw_ros.cpp  main.cpp  sc_hw.cpp  sc_hw_ros.cpp  transport_serial.cpp
src/sc_msgs/: CMakeLists.txt  package.xml
src/sc_msgs/msg/: intf_state.msg  vision_line.msg  vision_rect.msg
src/sc_msgs/srv/: GetParamList.srv  SetParamList.srv
src/sc_smach/: CMakeLists.txt  package.xml
src/sc_smach/scripts/: state_matchine2.py
src/viso2-kinetic/viso2_ros/launch/: fusion_odometry.launch  mono_odometry.launch  rgbd_odometry.launch
