<?xml version="1.0"?>
<package format="2">
  <name>line_tracker</name>
  <version>0.0.0</version>
  <description>The line_tracker package</description>

  <maintainer email="lch94102@163.com">lishenghao</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>sc_msgs</build_depend>
  <build_depend>opencv2</build_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>message_exectime</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>image_transport</exec_depend>
  <exec_depend>sc_msgs</exec_depend>
  <exec_depend>opencv2</exec_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
