<?xml version="1.0"?>
<package>
  <name>ocean_vision</name>
  <version>0.1.0</version>
  <description>
  This package provides beginner_tutorials.
  </description>
  <maintainer email="lch94102@163.com">Merical</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>sc_msgs</build_depend>
  <build_depend>opencv2</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>cv_bridge</run_depend>
  <run_depend>image_transport</run_depend>
  <run_depend>sc_msgs</run_depend>
  <run_depend>opencv2</run_depend>
</package>
