<?xml version="1.0"?>
<package>
  <name>sc_2dnav</name>
  <version>0.1.0</version>
  <description>The sc_2dnav package for handsfree navigation application config
  </description>

  <maintainer email="chenghao.li@oceanbotech.com">HandsFree</maintainer>
  <license>BSD</license>
  <url type="website">http://wiki.hfreetech.org</url>
  <url type="bugtracker">https://github.com/HANDS-FREE/handsfree/issues</url>
  <author email="lch94102@163.com">Chenghao Li</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>move_base_msgs</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>orocos_kdl</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>move_base_msgs</run_depend>
  <run_depend>visualization_msgs</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>actionlib</run_depend>
  <run_depend>orocos_kdl</run_depend>
  <run_depend>dynamic_reconfigure</run_depend>

  <export>

  </export>
</package>
