<?xml version="1.0"?>
<package>
  <name>sc_hw</name>
  <version>0.1.0</version>
  <description>The sc_hw package for sclink communication with embeded system ,ros_control frame
  </description>

  <maintainer email="lch94102@163.com">Merical</maintainer>

<license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>controller_manager</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>hardware_interface</build_depend>
  <build_depend>realtime_tools</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sc_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>tf</build_depend>
  <run_depend>tf</run_depend>
  <run_depend>sc_msgs</run_depend>
  <run_depend>controller_manager</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>hardware_interface</run_depend>
  <run_depend>realtime_tools</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>


  <export>


  </export>
</package>
